--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-manifest": "^3.9.0",
     "gatsby-plugin-offline": "^4.9.0",
     "gatsby-plugin-react-helmet": "^4.9.0",
+    "gatsby-plugin-sass": "^4.10.0",
     "gatsby-plugin-sharp": "^3.9.0",
     "gatsby-remark-copy-linked-files": "^4.6.0",
     "gatsby-remark-images": "^5.6.0",
@@ -25,6 +26,7 @@
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-remark": "^4.6.0",
     "gatsby-transformer-sharp": "^3.9.0",
+    "node-sass": "^6.0.1",
     "prismjs": "^1.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
