--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-remark-autolink-headers": "^4.9.0",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^4.6.0",
+    "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-images": "^5.6.0",
     "gatsby-remark-prismjs": "^5.7.0",
     "gatsby-remark-responsive-iframe": "^4.6.0",
