--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^4.9.0",
     "gatsby-plugin-sass": "^4.10.0",
     "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-plugin-typescript": "^3.13.0",
     "gatsby-remark-autolink-headers": "^4.9.0",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-copy-linked-files": "^4.6.0",
@@ -40,7 +41,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75"
+    "typeface-montserrat": "0.0.75",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "prettier": "2.3.2"
