--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.2",
     "prettier": "2.3.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
