--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
-    "typescript": "^4.4.2"
+    "typeface-montserrat": "0.0.75"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
+    "typescript": "^4.4.2",
     "esbuild": "^0.13.4",
     "esbuild-register": "^3.0.0",
     "prettier": "2.3.2"
