--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toriwatari blog",
+  "name": "toriwatari-blog",
   "private": true,
   "description": "My original blog",
   "version": "1.0.0",
