--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
-    "typescript": "^4.4.2",
     "esbuild": "^0.13.4",
     "esbuild-register": "^3.0.0",
-    "prettier": "2.3.2"
+    "gatsby-plugin-dts-css-modules": "^2.2.0",
+    "prettier": "2.3.2",
+    "typescript": "^4.4.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
