--- a/package.json
+++ b/package.json
@@ -50,10 +50,14 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "esbuild": "^0.13.4",
     "esbuild-register": "^3.0.0",
     "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.28.0",
     "gatsby-plugin-dts-css-modules": "^2.2.0",
     "prettier": "2.3.2",
     "typescript": "^4.4.2"
