--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,16 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "quotes": ["warn", "double"]
+      "quotes": ["warn", "double"],
+      "indent": ["warn", 2],
+      "semi": ["warn", "never"],
+      "object-curly-spacing": ["warn", "always"],
+      "linebreak-style": ["off"],
+      "comma-dangle": ["warn", "never"],
+      "react/prop-types": "off",
+      "react/display-name": "off",
+      "operator-linebreak": "off",
+      "max-len": "off",
+      "require-jsdoc": "off"
     }
 }
