--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "lint": "eslint src/**/**.{js,jsx,ts,tsx} gatsby-*.ts"
   }
 }
