--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,35 +1,40 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "google"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "plugin:react/recommended",
-        "google"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react",
-        "@typescript-eslint"
-    ],
-    "rules": {
-      "quotes": ["warn", "double"],
-      "indent": ["warn", 2],
-      "semi": ["warn", "never"],
-      "object-curly-spacing": ["warn", "always"],
-      "linebreak-style": ["off"],
-      "comma-dangle": ["warn", "never"],
-      "react/prop-types": "off",
-      "react/display-name": "off",
-      "operator-linebreak": "off",
-      "max-len": "off",
-      "require-jsdoc": "off"
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "react",
+    "@typescript-eslint"
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
     }
+  },
+  "rules": {
+    "quotes": ["warn", "double"],
+    "indent": ["warn", 2],
+    "semi": ["warn", "never"],
+    "object-curly-spacing": ["warn", "always"],
+    "linebreak-style": ["off"],
+    "comma-dangle": ["warn", "never"],
+    "react/prop-types": "off",
+    "react/display-name": "off",
+    "operator-linebreak": "off",
+    "max-len": "off",
+    "require-jsdoc": "off"
+  }
 }
