--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "My original blog",
   "version": "1.0.0",
-  "author": "Kento Yoshizu <>",
+  "author": "Kento Yoshizu",
   "bugs": {
     "url": "http://blog.toriwatari.work"
   },
