--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prop-types": "^15.8.1",
     "stylelint": "^14.5.1",
     "stylelint-config-standard": "^25.0.0",
+    "typed-css-modules": "^0.7.2",
     "typescript": "^4.4.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
