--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo hello world
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
